--- a/style.css
+++ b/style.css
@@ -87,10 +87,12 @@ nav ul li a{
     cursor: pointer;
     font-family: inherit;
     transition: all 0.5s ease-in-out;
+    box-shadow: -2px 2px 8px hsl(0, 0%, 70%);
 }
 
 .hero-btn:hover{
-    background-color: #2563eb;
+    background-color: hsl(221, 83%, 43%);
+    filter: brightness(120%);
 }
 
 .hero-btn:focus{
@@ -101,12 +103,12 @@ nav ul li a{
     background-color: #1d4ed8;
 }
 
-img{
+.hero-img{
     max-width: 100%;
     height: auto;
 }
 
-img:hover{
+.hero-img:hover{
     transform: scale(1.15);
     transition: all 0.5s ease-in-out;
 }
@@ -144,6 +146,19 @@ h2{
     border-radius: 10px;
     margin: 5px 30px;
 }
+
+.project-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transition: all 0.5s ease-in-out;
+}
+
+.project-img:hover{
+    transform: scale(1.15);
+    transition: all 0.5s ease-in-out;
+}
+
 
 .text{
     color: #1F2937;
@@ -216,6 +231,7 @@ cite{
     cursor: pointer;
     transition: all 0.5s ease-in-out;
     font-family: inherit;
+    box-shadow: -1px 2px 2px hsl(0, 0%, 0%);
 }
 
 .cta-btn:hover{
@@ -227,6 +243,18 @@ footer{
     color: white;
     padding: 20px 0;
     text-align: center;
+}
+
+footer a{
+    text-decoration: none;
+    color: #3882F6;
+    text-shadow: 1px 1px 8px #3882F6;
+    transition: all 0.5s ease-in-out;
+}
+
+footer a:hover{
+    text-shadow: -2px -2px 8px #3882F6;
+    filter: brightness(150%);
 }
 
 @media screen and (max-width: 768px) {
